Fixed alignment of compose text box and send button

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -7,14 +7,14 @@ form
   padding: 3px
   position: fixed
   bottom: 0
-  width: 100%
+  width: 90%
 form input
   border: 1px
   padding: 10px
-  //width: 90%
-  //margin-right: 0.5%
+  width: 87%
+  margin-right: 0.5%
 form button
-  //width: 9%
+  width: 9%
   border: none
   padding: 10px
 #messages
